complete profile page / fix layout bug

--- a/assets/scss/component/_avatar.scss
+++ b/assets/scss/component/_avatar.scss
@@ -15,3 +15,9 @@
     height: 40px;
     object-fit: contain;
 }
+
+.avatar-xl{
+  width: 72px;
+  height: 72px;
+  object-fit: contain;
+}
